# tokenwatch

./: .env.example  .gitignore  README.md  install.sh  pyproject.toml  test_anthropic.py  test_comprehensive.py  test_direct.py
docs/audit/: 2026-03-28-fresh-eyes.md  2026-03-28-phase-2-test-sweep.md  2026-03-28-phase-3-battle-hardening.md  2026-03-28-phase-4-security.md  2026-03-28-phase-5-performance.md  2026-03-28-phase-6-simplification.md  2026-03-28-phase-7-innovation.md  2026-03-28-phase-8-onboarding.md  2026-03-28-phase-9-final-gate.md
src/tokenwatch/: __init__.py  __main__.py  budget.py  cache.py  cli.py  config.py  dashboard_app.py  db.py  explain.py  failover.py  interceptor.py  models.py  privacy.py  proxy.py  replay.py  router.py  schema.sql  tagger.py  tagging.py  telemetry.py  ws.py
src/tokenwatch/dashboard/: index.html
tests/: test_battle_hardening.py  test_budget.py  test_cache.py  test_dashboard_app.py  test_explain.py  test_failover.py  test_interceptor.py  test_privacy.py  test_proxy.py  test_proxy_helpers.py  test_replay.py  test_router.py  test_security.py  test_tagging.py  test_ws.py
